<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/login_common_actionbar"
        layout="@layout/include_header_layout" />

    <EditText
        android:id="@+id/login_username_et"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="20dip"
        android:background="@color/color_FFFFFF"
        android:hint="@string/login_username_txt"
        android:inputType="number"
        android:paddingLeft="10dip"
        android:singleLine="true"
        android:textColor="@color/color_000000"
        android:textSize="14sp" />

    <View style="@style/view_line_style" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@color/color_FFFFFF"
        android:hint="@string/login_password_txt"
        android:paddingLeft="10dip"
        android:password="true"
        android:singleLine="true"
        android:textColor="@color/color_000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/login_login_bt"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/bt_login_selector"
        android:gravity="center"
        android:text="@string/login_login_txt"
        android:textColor="@color/color_FFFFFF"
        android:textSize="@dimen/bt_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <TextView
            android:id="@+id/login_forget_pwd_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dip"
            android:text="@string/login_forget_pwd_txt"
            android:textColor="@drawable/blue_txt_selector" />

        <TextView
            android:id="@+id/login_sms_login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dip"
            android:text="@string/login_msg_login_txt"
            android:textColor="@drawable/blue_txt_selector" />
    </RelativeLayout>

</LinearLayout>