<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/register_user_common_actionbar"
        layout="@layout/include_header_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="20dip"
        android:background="@color/color_FFFFFF"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <EditText
            android:id="@+id/register_user_auth_code_et"
            android:layout_width="200dip"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/register_yzm_txt"
            android:inputType="number"
            android:paddingLeft="10dip"
            android:textColor="@color/color_000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/register_get_auth_code_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bt_guide_selector"
            android:text="@string/register_get_auth_code_txt"
            android:textColor="@color/color_FFFFFF"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/register_phone_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/register_send_yzm_txt"
        android:textColor="@color/color_50FFFFFF"
        android:textSize="12sp" />

    <Button
        android:id="@+id/register_phone_ok_bt"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/bt_login_selector"
        android:gravity="center"
        android:text="@string/register_finish_txt"
        android:textColor="@color/color_FFFFFF"
        android:textSize="@dimen/bt_text_size" />

</LinearLayout>