<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/reset_pwd_common_actionbar"
        layout="@layout/include_header_layout" />

    <EditText
        android:id="@+id/reset_pwd_1_et"
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:layout_marginTop="10dip"
        android:background="@color/color_FFFFFF"
        android:hint="请输入新密码"
        android:paddingLeft="10dip"
        android:password="true"
        android:textColor="@color/color_000000"
        android:textSize="14sp" />

    <View style="@style/view_line_style" />

    <EditText
        android:id="@+id/reset_pwd_2_et"
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:background="@color/color_FFFFFF"
        android:hint="再次确认密码"
        android:paddingLeft="10dip"
        android:password="true"
        android:textColor="@color/color_000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/reset_pwd_phone_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/register_send_yzm_txt"
        android:textColor="@color/color_50FFFFFF"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@color/color_FFFFFF"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <EditText
            android:id="@+id/reset_pwd_auth_code_et"
            android:layout_width="200dip"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/register_yzm_txt"
            android:inputType="number"
            android:paddingLeft="10dip"
            android:textColor="@color/color_000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/reset_pwd_get_auth_code_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bt_guide_selector"
            android:text="@string/register_get_auth_code_txt"
            android:textColor="@color/color_FFFFFF"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/reset_pwd_ok_bt"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/bt_login_selector"
        android:gravity="center"
        android:text="@string/register_finish_txt"
        android:textColor="@color/color_FFFFFF"
        android:textSize="@dimen/bt_text_size" />

</LinearLayout>