<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/color_FFFFFF" >
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#20000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_tab_index_bt"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/main_tab_index_selector"
            android:gravity="center"
            android:onClick="onTabClicked"
            android:padding="5dip"
            android:text="@string/main_tab_index_txt"
            android:textColor="@drawable/main_tab_txt_selector"
            android:textSize="14sp" />

        <Button
            android:id="@+id/main_tab_jiaxiao_bt"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/main_tab_jiaxiao_selector"
            android:gravity="center"
            android:onClick="onTabClicked"
            android:padding="5dip"
            android:text="@string/main_tab_jiaxiao_txt"
            android:textColor="@drawable/main_tab_txt_selector"
            android:textSize="14sp" />

        <Button
            android:id="@+id/main_tab_find_bt"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/main_tab_find_selector"
            android:gravity="center"
            android:onClick="onTabClicked"
            android:padding="5dip"
            android:text="@string/main_tab_find_txt"
            android:textColor="@drawable/main_tab_txt_selector"
            android:textSize="14sp" />

        <Button
            android:id="@+id/main_tab_me_bt"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/main_tab_me_selector"
            android:gravity="center"
            android:onClick="onTabClicked"
            android:padding="5dip"
            android:text="@string/main_tab_me_txt"
            android:textColor="@drawable/main_tab_txt_selector"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>