<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/auth_code_login_common_actionbar"
        layout="@layout/include_header_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="10dip"
        android:background="@color/color_FFFFFF"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <EditText
            android:id="@+id/auth_code_login_phone_et"
            android:layout_width="200dip"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/register_phone_txt"
            android:inputType="number"
            android:paddingLeft="10dip"
            android:textColor="@color/color_000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/auth_code_login_get_auth_code_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bt_guide_selector"
            android:text="@string/register_get_auth_code_txt"
            android:textColor="@color/color_FFFFFF"
            android:textSize="12sp" />
    </RelativeLayout>

    <View style="@style/view_line_style" />

    <EditText
        android:id="@+id/auth_code_login_auth_code_et"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@color/color_FFFFFF"
        android:hint="填写短信验证码"
        android:paddingLeft="20dip"
        android:password="true"
        android:textColor="@color/color_000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/auth_code_login_ok_bt"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/bt_login_selector"
        android:gravity="center"
        android:text="@string/register_finish_txt"
        android:textColor="@color/color_FFFFFF"
        android:textSize="@dimen/bt_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="如未收到手机短信,请再次"
            android:textColor="@color/color_50FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="获取验证码"
            android:textColor="#57A2E8"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>